flex wrap fix

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -35,6 +35,7 @@ $mobile: 1024px;
       position: absolute;
       top: $top;
       width: 100%;
+      height: 100%;
       // height: 1080px;
       object-fit: cover;
       transition: all ease-in-out 0.3s;
