--- a/src/scss/reserve.scss
+++ b/src/scss/reserve.scss
@@ -15,7 +15,7 @@
     z-index: 5;
   }
   .banner-wrap {
-    @include banner(-280px, 0);
+    @include banner(0, 0);
     height: 25vmin;
     min-height: 200px;
   }
